﻿
BrawlCrate - v0.10
Copyright © 2018 soopercool101, MarioDox
BrawlBox  © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.10 - (8/30/2018)
 . Updated name and iconography (StageBox -> BrawlCrate)
 . Fix instabilities with model counters
 . Added automatic generation of SpyCloak materials for characters
 . Loop Previewing now defaults to what the selected animation's loop value is
 . Restored BoneFlag editing from BrawlBox v0.67b
 . Added basic sorting functionality to folders (note, simple alphabetical sort. Need to come up with a better algorithm that works with multiple digit numbers)
 . Added easy imports of commonly used files from https://github.com/soopercool101/BrawlCommonFiles/
   - Static Model
   - Stage Shadow Texture
   - SpyCloak Textures
 . Added 1:1 stage template imports from https://github.com/soopercool101/Stage-Templates-1to1s/
   - Project M 3.6
     . Battlefield
     . Delfino's Secret
     . Final Destination
     . Fountain of Dreams
     . Green Hill Zone
     . Pokémon Stadium 2
     . Smashville (with or without villagers)
     . Wario Land
   - Vanilla Brawl
     . Battlefield
     . Final Destination
     . Smashville (with or without villagers)
   - Custom
     . Sky Sanctuary Zone
 . Event Match fighter nodes now properly update name when fighter ID is changed